# image_to_text

./: LICENSE  README.md  image_to_text.py  pyproject.toml
